--- a/nav bar/nav.css
+++ b/nav bar/nav.css
@@ -1,30 +1,87 @@
+
+
 body{
   margin: 0;
   box-sizing: border-box;
   font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
- .card{
-    border: 1px solid #7e7eae ;
-    padding-left: 10px;
-    margin:10px auto;
-    border-radius: 14px;
-    width:280px;
-}   
-.card-img1{
-    width:100% ;
-    border-radius : 14px;
-    padding : 900;
+.container{
+    width: 560px;
+    margin:80px auto;
 }
 .card-img{
-    width:50%;
-    border-radius: 14px;
-     padding: 30px;
-     height: 500%;
-}    
+    border-radius: 50px;
+    width: 500px;
 
-.card-img3{
-    width:50% ;
-    border-radius: 10px;
-    padding: 40px;
- }  
+}
+h1{
+    width: 100%;
+}
+.newsletter-btn{
+    border-radius: 400px;
+    background-color: black;
+    color: rgb(248, 244, 247);
+    padding:16px;
+    width: 200px;
+    font-size: 16px;
+    position:fixed;
+    right:0;
+    top:20px;
+    height: 60px;
 
+    
+}
+.header h1{
+    position: sticky;
+    top:0px;
+    background-color: rgb(220, 131, 190);
+     border-radius: 10px;
+     width:auto;
+     padding:40px;
+}
+.footer{
+    background-color: rgb(237, 187, 187);
+    text-align: center;
+    bottom: 0px;
+    position:sticky;
+} */
+ .red{
+    height:80px;
+    width: 80px;
+    background-color: red;
+    
+}
+.blue{
+    height:80px;
+    width: 80px;
+    background-color: rgb(20, 20, 235);
+    position:relative;
+}
+.black{
+    height:80px;
+    width: 80px;
+    background-color: rgb(20, 18, 18);
+    
+} */
+
+ .bg{
+    width: 760px;
+    margin:60px auto;
+    position: relative;
+}
+.img-fluid{
+    border-radius:14px;
+    width:100%
+}
+.content{
+position:absolute;
+bottom:100px;
+left:40px;
+color: white;
+}
+.tint{
+    background-color: rgb(11, 8, 10);
+    width: 760px;
+    height:00px;
+    position: absolute;
+}
